--- a/Zoom/Base.lproj/Main.storyboard
+++ b/Zoom/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                                                 <rect key="frame" x="195" y="0.0" width="60" height="67.5"/>
                                                 <state key="normal" image="facebookclear"/>
                                                 <connections>
-                                                    <segue destination="L1e-Em-Lav" kind="show" id="TWQ-NC-p3D"/>
+                                                    <segue destination="L1e-Em-Lav" kind="show" identifier="MainToSocialMedia" id="TWQ-NC-p3D"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voH-Yf-xlL">
@@ -231,10 +231,10 @@
             </objects>
             <point key="canvasLocation" x="1044" y="841"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Social Media Table View Controller-->
         <scene sceneID="g6Z-AL-6Uf">
             <objects>
-                <tableViewController id="L1e-Em-Lav" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SocialMediaTableViewController" id="L1e-Em-Lav" customClass="SocialMediaTableViewController" customModule="Zoom" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="KOF-tv-SZv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -406,20 +406,20 @@
                         <viewControllerLayoutGuide type="bottom" id="i3e-s9-U9Y"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XXA-Wd-PE4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="generic_background" translatesAutoresizingMaskIntoConstraints="NO" id="vhM-dr-fHe">
-                                <rect key="frame" x="0.0" y="20" width="320" height="980"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="746-Jr-i3t">
-                                <rect key="frame" x="0.0" y="20" width="320" height="245.5"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="137.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="store_demo" translatesAutoresizingMaskIntoConstraints="NO" id="3VE-hV-lio">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="245.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="137.5"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4231 E. Little Creek Road Suite 102, Norfolk, VA 23518" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zLH-yh-WK7">
-                                        <rect key="frame" x="8" y="184.5" width="304" height="61"/>
+                                        <rect key="frame" x="8" y="103.5" width="304" height="34"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.54695526541095896" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -439,7 +439,7 @@
                                 </constraints>
                             </view>
                             <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JS6-yk-Jcp">
-                                <rect key="frame" x="31" y="265.5" width="258" height="734.5"/>
+                                <rect key="frame" x="31" y="157.5" width="258" height="410.5"/>
                                 <subviews>
                                     <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVG-sL-72G">
                                         <rect key="frame" x="0.0" y="0.0" width="258" height="630"/>
@@ -757,7 +757,7 @@
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OL2-zw-Z7Y">
-                                <rect key="frame" x="0.0" y="915" width="320" height="85"/>
+                                <rect key="frame" x="0.0" y="483" width="320" height="85"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="xXY-8I-e5n">
                                         <rect key="frame" x="40" y="0.0" width="240" height="72.5"/>
@@ -834,8 +834,6 @@
                             <constraint firstAttribute="trailingMargin" secondItem="JS6-yk-Jcp" secondAttribute="trailing" constant="15" id="s2h-h6-wiC"/>
                         </constraints>
                     </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="1000"/>
                     <connections>
                         <outlet property="BottomUIView" destination="ZMK-D3-hWl" id="woJ-GP-Gph"/>
                         <outlet property="MiddleUIView" destination="ADJ-IN-IUc" id="SfO-nn-V3D"/>
@@ -938,7 +936,7 @@
                                         <rect key="frame" x="0.0" y="119" width="288" height="51.5"/>
                                         <state key="normal" image="promo_call"/>
                                         <connections>
-                                            <segue destination="B7b-2t-ZhE" kind="show" id="dhZ-Rr-y8h"/>
+                                            <segue destination="B7b-2t-ZhE" kind="show" identifier="PromoToLocations" id="dhZ-Rr-y8h"/>
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="ZoomLogo" image="logo_medium" translatesAutoresizingMaskIntoConstraints="NO" id="vHE-oe-47m" customClass="CustomBorderUIImageView" customModule="Zoom" customModuleProvider="target">
@@ -1330,11 +1328,11 @@
         <image name="zoom_logo" width="161" height="63"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4ph-f4-Npo"/>
+        <segue reference="dhZ-Rr-y8h"/>
+        <segue reference="blt-6V-f3p"/>
         <segue reference="R9e-2o-bgJ"/>
         <segue reference="TWQ-NC-p3D"/>
         <segue reference="o11-Kt-sPa"/>
-        <segue reference="blt-6V-f3p"/>
         <segue reference="waf-Zt-K5J"/>
     </inferredMetricsTieBreakers>
 </document>
